move randomizer script to header

--- a/randomizer.html
+++ b/randomizer.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <script src="randomizer.js"></script>
         <style>
             body {
                 margin-left: 10px;
@@ -118,4 +120,3 @@
         </p>
     </body>
 </html>
-<script src="randomizer.js"></script>
